Fixed div  which was covering page in mobile view

--- a/ui.react/src/containers/homePage/style.css
+++ b/ui.react/src/containers/homePage/style.css
@@ -70,4 +70,7 @@ ul.unorderedList {
   div.button {
     width: 100%;
   }
+  .render {
+    width: 0;
+  }
 }
